fix: :lipstick: Remove shadow on mobile dropdown filter

--- a/src/styles/dropdownFilter.css
+++ b/src/styles/dropdownFilter.css
@@ -20,7 +20,6 @@
   .sto-sections-dropdown .sto-sections-select__control {
     padding: .5rem .5rem .5rem .2rem;
     border-radius: 0;
-    box-shadow: 0 2px 5px -4px #555555;
     height: 2.75rem;
   }
 
